Changes since 0.53:
  * add <area> to tags-with-no-end-tag in Rewriter rule
  * added more advert filters
  * remove unused blacklist zappers from CVS
  * fix string joining in wc.__init__.text_status()
  * really remove Content-Length header for rewritten content
  * only rely on mime type guessing values if both encoding and
    mime type were found

Changes since 0.52:
  * only filter some <meta name> tags, not all
  * README.squid, a sample squid configuration file to use with
    WebCleaner, was added
  * added some more advertising urls to filter
  * minor code cleanups
  * guess mime types non-strict (see Python docs)
  * use True/False boolean constants, which makes us...
  * ...Require Python >= 2.2