@@ -13,7 +13,7 @@
  strict_whitelist="0"
  debuglevel="3"
  showerrors="0"
- noproxyfor="localhost,127.0.0.1"
+ noproxyfor="127.0.0.1,localhost"
 >
 <filter name="Header"/>
 <filter name="Replacer"/>
