@@ -1,0 +1,14 @@
+# Implements the minimal amount of work needed to inflate an input stream
+
+import zlib
+
+class DeflateStream:
+    def __init__ (self):
+        self.decompressor = zlib.decompressobj(-zlib.MAX_WBITS)
+
+    def decode (self, s):
+        return self.decompressor.decompress(s)
+
+    def flush (self):
+        return self.decompressor.flush()
+
